package main.java;

public class KarguDesktopCLI {

  //

}

