@startuml

!include kargu_class.iuml

title <b>Kargu</b> | Diagram Kelas\nEntitas & Hubungan Antar Objek\n

class KarguDesktopApp
class KarguDesktopGUI
class KarguDesktopCLI
class Controller
class Database
class FormInput
class FormOutput
class Document
class Page
class Entry
enum TimeUnit

KarguDesktopApp *-- "1" Controller
KarguDesktopApp *-- "1" Database

Controller .u.> FormInput
Controller .u.> FormOutput
Controller o-- Database

Controller *-l- "1" KarguDesktopGUI
Controller *-- "1" KarguDesktopCLI

Document .l.> TimeUnit
Controller ..> Document
Database ..> Document : manages >
KarguDesktopGUI -- "1" Document : displays >

Document "1" o-- "1..*" Page : contains >
Page "1" o-- "*" Entry : contains >

hide members

@enduml
